spacing bugfix

--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
 }
 
 .content p{
-    padding: 20px 0;
+    padding: 20px 20px;
 }
 
 .content img{
